--- a/Sber_market.ipynb
+++ b/Sber_market.ipynb
@@ -80,17 +80,17 @@
    "outputs": [],
    "source": [
     "# формируем таблицы\n",
-    "orders = pd.read_sql(\"SELECT  id,created_at,delivery_window_id,item_total,promo_total,cost,total_cost,ship_address_id,shipped_at,state,store_id,total_quantity,total_weight,user_id FROM orders\", conn)\n",
+    "orders = pd.read_sql(\"SELECT * FROM orders\", conn)\n",
     "\n",
-    "delivery_windows = pd.read_sql(\"SELECT  id,starts_at,ends_at,store_id FROM delivery_windows\", conn)\n",
+    "delivery_windows = pd.read_sql(\"SELECT * FROM delivery_windows\", conn)\n",
     "\n",
-    "stores = pd.read_sql(\"SELECT  id,city,retailer_id FROM stores\", conn)\n",
+    "stores = pd.read_sql(\"SELECT  * FROM stores\", conn)\n",
     "\n",
-    "addresses = pd.read_sql(\"SELECT  id,lat,lon FROM addresses\", conn)\n",
+    "addresses = pd.read_sql(\"SELECT  * FROM addresses\", conn)\n",
     "\n",
-    "replacements = pd.read_sql(\"SELECT  item_id,order_id,state FROM replacements\", conn)\n",
+    "replacements = pd.read_sql(\"SELECT  * FROM replacements\", conn)\n",
     "\n",
-    "cancellations = pd.read_sql(\"SELECT  item_id,order_id,state FROM cancellations\", conn)"
+    "cancellations = pd.read_sql(\"SELECT  * FROM cancellations\", conn)"
    ]
   },
   {
